--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-list-endpoints": "^6.0.0",
     "express-rate-limit": "^6.4.0",
     "mongoose": "^6.4.0",
     "morgan": "^1.10.0",
