--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Nothy app backend api server for nothy client app",
   "main": "app.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon app.js",
-    "prod": "cross-env NODE_ENV=production nodemon app.js",
+    "start": "cross-env NODE_ENV=development nodemon server.js",
+    "dev": "nodemon server.js",
+    "prod": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,17 +26,23 @@
   },
   "homepage": "https://github.com/Richy8/notes-todos-server#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-list-endpoints": "^6.0.0",
     "express-rate-limit": "^6.4.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.16",
+    "nodemailer": "^6.7.7",
+    "nodemailer-express-handlebars": "^5.0.0",
+    "redis": "^4.2.0",
+    "validator": "^13.7.0",
     "winston": "^3.7.2"
   },
   "devDependencies": {
+    "nodemon": "^2.0.16",
     "cross-env": "^7.0.3"
   }
 }
