--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development nodemon server.js",
-    "dev": "nodemon server.js",
+    "dev": "nodemon -L server.js",
     "prod": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
