--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.30.1",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
@@ -37,6 +38,7 @@
     "fs-extra": "^10.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0",
+    "mongoose-paginate": "^5.0.3",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.7",
     "nodemailer-express-handlebars": "^5.0.0",
